--- a/nginxkube.yml
+++ b/nginxkube.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: my-nginx
-        image: rjgallac/smallnginxsample:master
+        image: rjgallac/smallnginxsample:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 80
